--- a/tmux.conf
+++ b/tmux.conf
@@ -14,3 +14,4 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded.."
+bind -n C-k send-keys -R \; clear-history
