--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g history-limit 8000
 setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
@@ -15,3 +16,19 @@ bind -t vi-copy y copy-selection
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded.."
 bind -n C-k send-keys -R \; clear-history
+
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-resurrect      \
+'
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
