Add mouse scroll support.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g history-limit 8000
 setw -g mode-keys vi
+setw -g mode-mouse on
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
