--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g history-limit 8000
 setw -g mode-keys vi
 setw -g mode-mouse on
+setw -g mouse-resize-pane on
+setw -g mouse-select-pane on
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
