--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g history-limit 16000
 setw -g mode-keys vi
-setw -g mode-mouse on
-setw -g mouse-resize-pane on
-setw -g mouse-select-pane on
+setw -g mouse on
+setw -g mouse-utf8 on
+bind -n WheelUpPane copy-mode
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -21,17 +21,10 @@ bind R source-file ~/.tmux.conf \; display-message "  Config reloaded.."
 bind -n C-k send-keys -R \; clear-history
 
 # List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-resurrect      \
-'
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
