--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ setw -g mode-keys vi
 setw -g mouse on
 setw -g mouse-utf8 on
 bind -n WheelUpPane copy-mode
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
