Upgrade tmux config for new version

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,9 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g history-limit 16000
 setw -g mode-keys vi
-setw -g mouse on
-setw -g mouse-utf8 on
+set -g mouse on
 bind -n WheelUpPane copy-mode
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+#bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind h select-pane -L
 bind j select-pane -D
@@ -16,8 +15,8 @@ unbind [
 bind ` copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded.."
 bind -n C-k send-keys -R \; clear-history
